fix CSS bug with video player button on iOs

--- a/src/components/VideoBanner/VideoBanner.css
+++ b/src/components/VideoBanner/VideoBanner.css
@@ -1,20 +1,21 @@
 video::-webkit-media-controls-overlay-play-button {
   display: none !important;
+  -webkit-appearance: none;
 }
 
-*::-webkit-media-controls-panel {
+video::-webkit-media-controls-panel {
   display: none !important;
   -webkit-appearance: none;
 }
 
-*::-webkit-media-controls-play-button {
+video:-webkit-media-controls-play-button {
   display: none !important;
-  -webkit-appearance: none !important;
+  -webkit-appearance: none;
 }
 
-*::-webkit-media-controls-start-playback-button {
+video::-webkit-media-controls-start-playback-button {
   display: none !important;
-  -webkit-appearance: none !important;
+  -webkit-appearance: none;
 }
 
 @keyframes fade-in {
